# animated-julia-ml

./: README.md  animated_julia.opam  dune  dune-project
bench/: dune  main.ml
lib/: cmd.ml  complex.ml  complex.mli  dune  event.ml  event.mli  float_complex.ml  float_complex.mli  julia.ml  julia.mli  mode.ml  mode.mli  state.ml  state.mli
